--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="index.html">Activities</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Our Services</a>
+                    </li>
                    
                 </ul>
             </div>
