--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Inicio</title>
-        <!-- Íconos y link de Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <link href="./css/index.css" rel="stylesheet" />
-    </head>
-    <body>
-        <header>
-            <h1 class="animate__animated animate__bounce">Noah´s Little Ark</h1>
-            <h4 class="animate__animated animate__bounce">Daycare Inc</h4>
-        </header>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Noah´s Little Ark DayCare Inc.</title>
+    <!-- Íconos y link de Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="./css/index.css" rel="stylesheet" />
+   
+<body>
+    <header>
+        <h1 class="animate__animated animate__bounce">Noah´s Little Ark</h1>
+        <h4 class="animate__animated animate__bounce">Daycare Inc</h4>
+    </header>
 
-         <!-- Menú -->
+    <!-- Menú -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menú">
         <div class="container-fluid">
             <!-- Botón de colapso del menú -->
@@ -24,24 +24,53 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <!-- Menú colapsado -->
             <div class="collapse navbar-collapse order-3 order-lg-1" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">About Us</a>
+                        <a class="nav-link" href="#AboutUs">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Activities</a>
+                        <a class="nav-link" href="#Activities">Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Our Services</a>
+                        <a class="nav-link" href="#OurService">Our Services</a>
                     </li>
-                   
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Contacts">Contacts</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <main>
+        <section id="AboutUs" style="text-align: center;">
+            <h3>About Us</h3>
+        </section>
+
+        <section id="Activities" style="text-align: center;">
+            <h3>Activities</h3>
+        </section>
+
+        <section id="OurService" style="text-align: center;">
+            <h3>Our Services</h3>
+        </section>
+
+        <section id="Contacts" class="text-center">
+            <h5>Get in touch</h5>
+            <p><a href="tel:+15168844159">Phone: +1 (516) 884 4159</a></p>
+            <p>Schedule:</p>
+            <p>Monday - Friday (6 a.m - 6 p.m)</p>
+            <p>
+                Location: 
+                <a href="https://www.google.com/maps?q=29+Butternut+Ln,+Levittown,+NY+11756" target="_blank" rel="noopener">
+                  29 Butternut Ln, Levittown, NY 11756
+                </a>
+              </p>
+        </section>
+    </main>
 
     <footer>
         <div class="iconos-redes">
@@ -51,10 +80,10 @@
         </div>
     </footer>
 
-    </body>
-
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+ 
+</body>
 </html>
