--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <link href="./css/index.css" rel="stylesheet" />
    
 <body>
-    <header>
-        <h1 class="animate__animated animate__bounce">Noah´s Little Ark</h1>
-        <h4 class="animate__animated animate__bounce">Daycare Inc</h4>
-    </header>
+    <header class="encabezado">
+        <figure>
+          <img src="./img/Logo-Nombre.png" alt="Logo" width="120" height="150">
+        </figure>
+        <div class="titulo">
+          <h1 class="animate__animated animate__bounce">Noah´s Little Ark</h1>
+          <h4 class="animate__animated animate__bounce">Daycare Inc</h4>
+        </div>
+      </header>
+      
 
     <!-- Menú -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menú">
@@ -59,16 +65,16 @@
         </section>
 
         <section id="Contacts" class="text-center">
-            <h5>Get in touch</h5>
-            <p><a href="tel:+15168844159">Phone: +1 (516) 884 4159</a></p>
-            <p>Schedule:</p>
-            <p>Monday - Friday (6 a.m - 6 p.m)</p>
-            <p>
-                Location: 
-                <a href="https://www.google.com/maps?q=29+Butternut+Ln,+Levittown,+NY+11756" target="_blank" rel="noopener">
-                  29 Butternut Ln, Levittown, NY 11756
-                </a>
-              </p>
+            <h5> Get in touch</i></h5>
+                <p><a href="tel:+15168844159">Phone: +1 (516) 884 4159</a></p>
+                <p>Schedule:</p>
+                <p>Monday - Friday (6 a.m - 6 p.m)</p>
+                <p>
+                    Location: 
+                    <a href="https://www.google.com/maps?q=29+Butternut+Ln,+Levittown,+NY+11756" target="_blank" rel="noopener">
+                      29 Butternut Ln, Levittown, NY 11756
+                    </a>
+                  </p>
         </section>
     </main>
 
