--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <section class="col-lg-6 col-md-12">
                     <div id="PlayAreas" class="card p-3 h-100">
                       <div class="card-body">
-                        <i class="fa-solid fa-child" style="font-size: 2rem; color: #B197FC;"></i>
+                        <i class="fa-solid fa-child" style="font-size: 22px; color: #B197FC;"></i>
                         <h5 class="card-title">Age Appropiate Activities</h5>
                         <p>Hablar sobre las actividades por edad</p>
                       </div>
