--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <section class="col-lg-6 col-12">
                       <div id="PlayAreas" class="card p-3 h-100">
                           <div class="card-body">
-                              <i class="fa-solid fa-a" style="font-size: 2rem; color: #57ff92; font-size: 22px;"></i>
+                              <i class="fa-solid fa-a" style="font-size: 25px; color: #57ff92; font-size: 22px;"></i>
                               <h5 class="card-title">Bilingual ENG/SPA</h5>
                               <p>Hablar sobre que es un daycare bilingüe</p>
                           </div>
@@ -103,7 +103,7 @@
                   <section class="col-lg-6 col-12">
                       <div id="PlayAreas" class="card p-3 h-100">
                           <div class="card-body">
-                              <i class="fa-solid fa-child" style="font-size: 22px; color: #B197FC;"></i>
+                              <i class="fa-solid fa-child" style="font-size: 25px; color: #B197FC;"></i>
                               <h5 class="card-title">Age Appropriate Activities</h5>
                               <p>Hablar sobre las actividades por edad</p>
                           </div>
@@ -141,7 +141,7 @@
                   <section class="col-lg-6 col-12">
                       <div id="PlayAreas" class="card p-3 h-100">
                           <div class="card-body">
-                              <i class="fa-solid fa-apple-whole" style="color: #f50a0a; font-size: 22px;"></i>
+                              <i class="fa-solid fa-apple-whole" style="color: #f50a0a; font-size: 25px;"></i>
                               <h5 class="card-title">Breakfast, Lunch and Snacks</h5>
                               <p>Hablar sobre los snacks y almuerzos que ofrecen tipo lo saludable</p>
                           </div>
@@ -185,7 +185,7 @@
                   <section class="col-lg-6 col-12">
                       <div id="PlayAreas" class="card p-3 h-100">
                           <div class="card-body">
-                              <i class="fa-solid fa-rainbow" style="color: #FFD43B; font-size: 22px;"></i>
+                              <i class="fa-solid fa-rainbow" style="color: #FFD43B; font-size: 25px;"></i>
                               <h5 class="card-title">Indoor-Outdoor Play Areas</h5>
                               <p>Hablar sobre las áreas que ofrecen</p>
                           </div>
