--- a/index.html
+++ b/index.html
@@ -67,7 +67,143 @@
         <section id="Activities" style="text-align: center;">
             <h5>Activities</h5>
             <p>Acá va la parte de las actividades tipo baile, festividades y demás</p>
-        </section>
+            <!--ARTE-->
+            <div class="container my-5">
+              <div class="row">
+                  <!-- Sección de texto -->
+                  <section class="col-lg-6 col-12 mb-4">
+                      <div id="PlayAreas" class="card p-3 h-100">
+                          <div class="card-body">
+                            <i class="fa-solid fa-palette" style="color: #cb9010; font-size: 25px;"></i>
+                              <h5 class="card-title">Arts & Craft</h5>
+                              <p>Colocar algo relacionado con artes</p>
+                          </div>
+                      </div>
+                  </section>
+          
+                  <!-- Sección de imágenes (carrusel) -->
+                  <section class="col-lg-6 col-12 mb-4">
+                      <div id="carouselArt" class="carousel slide carrusel-redondo">
+                          <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselArt" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselArt" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselArt" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                          </div>
+                          <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                  <img src="img/indoor-1.jpeg" class="d-block w-100 img-fluid" alt="Imagen 1">
+                              </div>
+                              <div class="carousel-item">
+                                  <img src="img/indoor-2.jpeg" class="d-block w-100 img-fluid" alt="Imagen 2">
+                              </div>
+                              <div class="carousel-item">
+                                  <img src="img/indoor-3.jpeg" class="d-block w-100 img-fluid" alt="Imagen 3">
+                              </div>
+                          </div>
+                          <button class="carousel-control-prev" type="button" data-bs-target="#carouselArt" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon"></span>
+                          </button>
+                          <button class="carousel-control-next" type="button" data-bs-target="#carouselArt" data-bs-slide="next">
+                              <span class="carousel-control-next-icon"></span>
+                          </button>
+                      </div>
+                  </section>
+              </div>
+          </div>
+          
+<!--DANCE-->
+<div class="container my-5">
+  <div class="row">
+      <!-- Sección de texto -->
+      <section class="col-lg-6 col-12 mb-4">
+          <div id="PlayAreas" class="card p-3 h-100">
+              <div class="card-body">
+                <i class="fa-solid fa-music" style="color: #f38cdd; font-size: 25px;"></i>
+                  <h5 class="card-title">Dance</h5>
+                  <p>Colocar algo relacionado con danza o música</p>
+              </div>
+          </div>
+      </section>
+
+      <!-- Sección de imágenes (carrusel) -->
+      <section class="col-lg-6 col-12 mb-4">
+          <div id="carouselDance" class="carousel slide carrusel-redondo">
+              <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselDance" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselDance" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselDance" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <img src="img/indoor-1.jpeg" class="d-block w-100 img-fluid" alt="Imagen 1">
+                  </div>
+                  <div class="carousel-item">
+                      <img src="img/indoor-2.jpeg" class="d-block w-100 img-fluid" alt="Imagen 2">
+                  </div>
+                  <div class="carousel-item">
+                      <img src="img/indoor-3.jpeg" class="d-block w-100 img-fluid" alt="Imagen 3">
+                  </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselDance" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselDance" data-bs-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+              </button>
+          </div>
+      </section>
+  </div>
+</div>
+<!--SENSORY PLAY-->
+
+<div class="container my-5">
+  <div class="row">
+      <!-- Sección de texto -->
+      <section class="col-lg-6 col-12 mb-4">
+          <div id="PlayAreas" class="card p-3 h-100">
+              <div class="card-body">
+                <i class="fa-solid fa-hand" style="color: #7358f9; font-size: 25px;"></i>
+                  <h5 class="card-title">Sensory Play</h5>
+                  <p style="text-align: justify;">  Fine motor skills are crucial for toddlers because they enable them to perform everyday tasks 
+                    like eating, dressing, and playing with toys. These skills develop the small muscles in their 
+                    hands and fingers, which are necessary for precise movements such as grasping, pinching, and 
+                    manipulating objects. Ultimately, these abilities prepare them for future activities like writing 
+                    and buttoning clothes.
+                  </p>
+              </div>
+          </div>
+      </section>
+
+      <!-- Sección de imágenes (carrusel) -->
+      <section class="col-lg-6 col-12 mb-4">
+          <div id="carouselDance" class="carousel slide carrusel-redondo">
+              <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselDance" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselDance" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselDance" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <img src="img/indoor-1.jpeg" class="d-block w-100 img-fluid" alt="Imagen 1">
+                  </div>
+                  <div class="carousel-item">
+                      <img src="img/indoor-2.jpeg" class="d-block w-100 img-fluid" alt="Imagen 2">
+                  </div>
+                  <div class="carousel-item">
+                      <img src="img/indoor-3.jpeg" class="d-block w-100 img-fluid" alt="Imagen 3">
+                  </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselDance" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselDance" data-bs-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+              </button>
+          </div>
+      </section>
+  </div>
+</div>
+</section>
 
         <section id="OurService" style="text-align: center;">
           <h5>Our Services</h5>
@@ -142,7 +278,7 @@
                       <div id="PlayAreas" class="card p-3 h-100">
                           <div class="card-body">
                               <i class="fa-solid fa-apple-whole" style="color: #f50a0a; font-size: 25px;"></i>
-                              <h5 class="card-title">Breakfast, Lunch and Snacks</h5>
+                              <h5 class="card-title">Breakfast, Lunch & Snacks</h5>
                               <p>Hablar sobre los snacks y almuerzos que ofrecen tipo lo saludable</p>
                           </div>
                       </div>
